--- a/apps/ms-ppr/CMakeLists.txt
+++ b/apps/ms-ppr/CMakeLists.txt
@@ -1,4 +1,4 @@
 project(ms-ppr)
 add_graphlab_executable(baseline baseline.cpp)
-add_graphlab_executable(batch-query batch-query.cpp)
-add_graphlab_executable(batch-query-v2 batch-query-v2.cpp)
+add_graphlab_executable(query-backward query-backward.cpp)
+add_graphlab_executable(query-flow query-flow.cpp)
