--- a/apps/ms-ppr/CMakeLists.txt
+++ b/apps/ms-ppr/CMakeLists.txt
@@ -2,3 +2,4 @@ project(ms-ppr)
 add_graphlab_executable(baseline baseline.cpp)
 add_graphlab_executable(query-backward query-backward.cpp)
 add_graphlab_executable(query-flow query-flow.cpp)
+add_graphlab_executable(query-flow-v2 query-flow-v2.cpp)
