Now we have two PPR algorithms based on random walk
-   rw-fullpath: the original baseline, consider every node on the path of each
    walker
-   rw-endpoint: only consider the endpoint of each path

--- a/apps/ms-ppr/CMakeLists.txt
+++ b/apps/ms-ppr/CMakeLists.txt
@@ -1,5 +1,6 @@
 project(ms-ppr)
-add_graphlab_executable(baseline baseline.cpp)
+add_graphlab_executable(rw-endpoint rw-endpoint.cpp)
+add_graphlab_executable(rw-fullpath rw-fullpath.cpp)
 add_graphlab_executable(query-backward query-backward.cpp)
 add_graphlab_executable(query-flow query-flow.cpp)
 add_graphlab_executable(query-flow-v2 query-flow-v2.cpp)
