--- a/apps/ms-ppr/CMakeLists.txt
+++ b/apps/ms-ppr/CMakeLists.txt
@@ -4,3 +4,4 @@ add_graphlab_executable(rw-fullpath rw-fullpath.cpp)
 add_graphlab_executable(query-backward query-backward.cpp)
 add_graphlab_executable(query-flow query-flow.cpp)
 add_graphlab_executable(query-flow-v2 query-flow-v2.cpp)
+add_graphlab_executable(power-iteration power-iteration.cpp)
